# sqlite-docs

./: .gitignore  Cargo.toml  Makefile  NOTES.md  README.md
cli/: Cargo.toml
cli/src/: datasette.rs  main.rs  markdown.rs
core/: Cargo.toml
core/src/: lib.rs
examples/congress/: Makefile  congress.sql  docs.md
examples/nyc-taxi/: schema.sql
examples/simple/: Makefile  docs.md  schema.sql
extension/: Cargo.toml
extension/src/: lib.rs  tables.rs
