[package]
name = "sqlite-docs-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.29.0", features=["bundled"] }
sqlite-docs-extension = { path = "../extension" }
sqlite-docs-core = { path = "../core" }
serde_json = "1"
serde = "1"
clap = {version="4.1.8", features=["derive"]}
anyhow = "1.0"
indexmap = { version = "2.0.0", features=["serde"] }
